tests/paczka1/fuzzy1/56141877.err
Error in line 10: vImCmy A297 84,2
Error in line 11: vImCmy S901 62,1
Error in line 28: ab89Lie S633 1e5,2
Error in line 30: S633 A297 61,1
Error in line 33: IGy0nhaMDV S633 72,8
